syntax = "proto3";
package vectorxlite_pb;

service VectorXLitePB {
  rpc CreateCollection(CollectionConfigPB) returns (EmptyPB);
  rpc Insert(InsertPointPB) returns (EmptyPB);
  rpc Search(SearchPointPB) returns (SearchResponsePB);
}

message EmptyPB {}

message CollectionConfigPB {
  string collection_name = 1;
  string distance = 2;            // e.g. "Cosine" | "Euclidean" | "Dot"
  uint32 vector_dimension = 3;
  string payload_table_schema = 4;
  string index_file_path = 5;
}

message InsertPointPB {
  string collection_name = 1;
  int64 id = 2;
  repeated float vector = 3;
  string payload_insert_query = 4;
}

message SearchPointPB {
  string collection_name = 1;
  repeated float vector = 2;
  uint32 top_k = 3;
  string payload_search_query = 4;
}

message KeyValuePB {
  string key = 1;
  string value = 2;
}

message SearchResultItemPB {
  int64 rowid = 1;
  float distance = 2;
  repeated KeyValuePB payload = 3;
}

message SearchResponsePB {
  repeated SearchResultItemPB results = 1;
}